--- a/lazer.html
+++ b/lazer.html
@@ -108,7 +108,7 @@ div#interface aside#lateral a#b8 {
 			  <h2>Games em JavaScript e C++</h2>
 					 <a id="b8" href="JogoDaTartaruga/index.html">Pong Game</a><br>
            <a id href="JogoDaVelha/index.html">JogoDaVelha - em construção...:D</a><br>
-           <a id="b8" href="">Domino - C++</a></br>
+           <a id="b8" href="https://github.com/sergiopiresbarra/sergiopiresbarra.github.io/tree/master/DominoCplusplus">Domino - C++</a></br>
            
 		</aside>
 		<footer id="rodape">
