--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
            <p style="background-color:Gray;">Outros</p>
             <a id="gg" href="html/index.html">Trabalho01 - Manipulação de Poligonos - C++</a><br>
             <a id="gg" href="html/htmlDoProjeto02/html/index.html">Trabalho02 - Desenhos de Figuras em ASCII - C++</a><br>
+           <a id="gg" href="html/htmlDoProjeto03/html/index.html">Trabalho03 - Servidor e cliente Local - C++ - QT</a><br>
         </section>
         <!-- RODAPÉ -->
         <footer class="rodape container bg-gradient">
