contador de visitas

--- a/index.html
+++ b/index.html
@@ -306,7 +306,10 @@
             <a href="https://github.com/sergiopiresbarra"><i class="fa fa-github"></i></a>
           </div>
           <p id="v">visitantes:</p>
-          <a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=php-ubuntu-sergiopires201491269500.codeanyapp.com/dsi/projeto01/index.html&digit=style/plain/1/&reloads=0" alt="www.reliablecounter.com" title="www.reliablecounter.com" border="0"></a>
+          <!-- hitwebcounter Code START -->
+                <a href="https://www.hitwebcounter.com" target="_blank">
+                <img src="https://hitwebcounter.com/counter/counter.php?page=7209586&style=0001&nbdigits=5&type=page&initCount=0" title="User Stats" Alt="webcounterwebsite" border="0">
+                </a>    
 
           <p class="copyright">
             Desde 2017
