cursor e perfil pro

--- a/profissional.html
+++ b/profissional.html
@@ -28,7 +28,7 @@
 	<div id="interface">
 		<h1>Perfil profissional.</h1>
 		<img src="https://image.flaticon.com/icons/png/512/31/31625.png" width="200" height="200">
-		<p>Nome: Sérgio Pires Barra.<br>Nascimento: 09/10/1995.<br>Local de nascimento: Belém-PA.<br>Atualmente: Estudante de Bacharelado de Ciências e Tecnologia da UFRN.<br>Esperiências:<br>Um pouco de IOT, Html, C++, Scratch, Arduino.</p>
+		<p>Nome: Sérgio Pires Barra.<br>Nascimento: 09/10/1995.<br>Local de nascimento: Belém-PA.<br>Atualmente: Estudante de Engenharia da Computação, Formado em Bacharel de Ciências e Tecnologia da UFRN.<br>Esperiências:<br>Um pouco de IOT, Html, C++, Scratch, Arduino e Python.</p>
 		<div id="interface10">
 			<a id="ss" href="index.html">Voltar.</a>
 			<span class="normal">
