--- a/JogoDaTartaruga/index.html
+++ b/JogoDaTartaruga/index.html
@@ -18,6 +18,7 @@
     </head>
     <body>
         <h1>Jogo</h1>
+	    <h2>teclas A e D para mover.</h2>
 		<button onclick="iniciarJogo()">
 			Jogar
 		</button>
