--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="menu">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="profissional.html">Perfil Proficional</a></li>
+        <li><a href="profissional.html">Perfil Profissional</a></li>
         <li><a href="lazer.html">Área de Lazer</a></li>
         <li><a href="contato.html">Contato</a></li>
         <li><a href="links.html">Links</a></li>
